--- a/app/globals.css
+++ b/app/globals.css
@@ -20,4 +20,9 @@ body {
   color: white;
 }
 
-/* nav */
+h1 {
+  z-index: 100;
+  font-size: 2.5rem;
+  font-family: 'Chillax';
+  pointer-events: none;
+}
