--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,20 @@ body {
 
 h1 {
   z-index: 100;
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-family: 'Chillax';
   pointer-events: none;
+}
+
+.main-wrapper {
+  margin: 0 5%;
+}
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100lvh;
+  background: linear-gradient(rgb(55, 55, 55), var(--bg-color));
 }
