--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -2,19 +2,28 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 1.5rem;
-  /* position: absolute; */
+  padding: 1.5rem 0;
+  position: fixed;
   top: 0;
   z-index: 100;
+  width: 100%;
 }
 
 .logo {
   font-family: 'Chillax';
   font-size: 2rem;
+  margin-left: 2rem;
 }
 
 .nav-right {
   display: flex;
   gap: 1.5rem;
   font-size: 1.2rem;
+  margin-right: 2rem;
+}
+
+@media (max-width: 800px) {
+  .nav-right {
+    font-size: 0.9rem;
+  }
 }
