--- a/app/globals.css
+++ b/app/globals.css
@@ -22,20 +22,27 @@ body {
 
 h1 {
   z-index: 99;
-  font-size: 3rem;
+
   font-family: 'Chillax';
   pointer-events: none;
 }
 
-.main-wrapper {
-  margin: 0 5%;
+h2 {
+  font-size: 3.5rem;
 }
 
-.hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100lvh;
-  background: linear-gradient(rgb(55, 55, 55), var(--bg-color));
+h3 {
+  text-align: center;
+  font-size: 3.5rem;
+  margin-top: 3rem;
+  font-weight: 300;
+}
+
+p {
+  max-width: 60rem;
+  font-size: 1.5rem;
+}
+
+.main-wrapper {
+  margin: 0 5%;
 }
