--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -2,12 +2,14 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 0;
+  padding: 1.5rem 0 0 0;
+  margin: 0 0 1.5rem 0;
   position: fixed;
   top: 0;
   z-index: 100;
   width: 100%;
-  background: linear-gradient(var(--bg-color), #1e1e1e00);
+  /* background: linear-gradient(var(--bg-color), #1e1e1e00); */
+  backdrop-filter: blur(5px);
 }
 
 .logo {
