--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -2,8 +2,8 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 0 0 0;
-  margin: 0 0 1.5rem 0;
+  padding: 0.5rem 0 0.3rem 0;
+
   position: fixed;
   top: 0;
   z-index: 100;
