--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -2,7 +2,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5rem 0 0.3rem 0;
+  padding: 0.5rem 0 0 0;
 
   position: fixed;
   top: 0;
