--- a/app/globals.css
+++ b/app/globals.css
@@ -42,10 +42,17 @@ h3 {
 p {
   max-width: 60rem;
   font-size: 1.5rem;
+  color: rgb(163, 163, 163);
 }
 
 .main-wrapper {
   margin: 0 5%;
+}
+
+hr {
+  border-width: 1px;
+  border-color: rgb(73, 73, 73);
+  margin: 4rem 0 3rem 0;
 }
 
 @media (max-width: 800px) {
