--- a/styles/form.css
+++ b/styles/form.css
@@ -6,6 +6,7 @@ textarea {
   max-width: 30rem;
   width: 100%;
   transition: border 0.3s ease-in-out;
+  display: block;
 }
 
 input {
@@ -15,7 +16,6 @@ input {
 
 textarea {
   border-bottom: 1px #4b4b4b solid;
-
   min-height: 2rem;
 }
 
@@ -33,11 +33,27 @@ form {
   margin-bottom: 10rem;
 }
 label {
-  display: block;
   color: white;
   font-size: 1.5rem;
 }
 
 .message-label {
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
 }
+
+.error {
+}
+
+/* button {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  font-family: 'Chillax';
+  border: 1px solid gray;
+  padding: 0.5rem 1.5rem;
+  border-radius: 10px;
+  transition: border 0.3s ease-in-out;
+}
+
+button:hover {
+  border: 1px solid #35635e;
+} */
