--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,7 @@ h1 {
   font-family: 'Chillax';
   pointer-events: none;
   line-height: 1rem;
+  letter-spacing: -1px;
 }
 
 h2 {
@@ -36,6 +37,7 @@ h2 {
 
 h3 {
   font-size: 2rem;
+  font-weight: 400;
 }
 
 p {
