--- a/styles/form.css
+++ b/styles/form.css
@@ -54,6 +54,22 @@ label {
   align-items: center;
 }
 
+.submit-icon {
+  color: #c9c9c9;
+}
+
+.submit-btn {
+  transition: box-shadow 0.1s ease-in-out;
+}
+
+.submit-btn:active {
+  box-shadow: inset 0 0 0 1px #35635e;
+}
+
+.submit-btn:hover .submit-icon {
+  color: #c2fede;
+}
+
 /* button {
   margin-top: 1rem;
   font-size: 1.5rem;
