--- a/app/globals.css
+++ b/app/globals.css
@@ -63,13 +63,17 @@ p {
   display: flex;
   gap: 2rem;
   align-items: center;
-  margin: 3.5rem 0;
+  margin-bottom: 3.5rem;
+}
+
+.special-text {
+  max-width: 50rem;
 }
 .people-cards {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 3.5rem 0;
+  margin: 5rem 0;
 }
 
 .reverse {
@@ -84,6 +88,8 @@ hr {
 
 li {
   font-size: 1.5rem;
+  color: #a3a3a3;
+  margin: 1rem;
 }
 
 .evervault {
