--- a/styles/form.css
+++ b/styles/form.css
@@ -62,9 +62,9 @@ label {
   transition: box-shadow 0.1s ease-in-out;
 }
 
-.submit-btn:active {
-  box-shadow: inset 0 0 0 1px #35635e;
-}
+/* .submit-btn:active {
+  box-shadow: inset 0 0 0 2px #35635e;
+} */
 
 .submit-btn:hover .submit-icon {
   color: #c2fede;
