--- a/app/globals.css
+++ b/app/globals.css
@@ -61,9 +61,9 @@ p {
 
 .special-cards {
   display: flex;
-  gap: 2rem;
   align-items: center;
   margin-bottom: 3.5rem;
+  justify-content: space-between;
 }
 
 .special-text {
@@ -79,6 +79,15 @@ p {
 
 .reverse {
   flex-direction: row-reverse;
+}
+
+.special-img {
+  margin-right: 7rem;
+}
+
+.reverse {
+  margin-left: 7rem;
+  margin-right: 0;
 }
 
 hr {
@@ -120,6 +129,9 @@ li {
   .special-cards {
     margin: 0;
   }
+  .people-cards {
+    margin-top: 7rem;
+  }
   h2 {
     font-size: 2rem;
   }
@@ -129,6 +141,9 @@ li {
   }
   li {
     font-size: 1.2rem;
+  }
+  ul {
+    margin-bottom: 3rem;
   }
   .special-text p {
     margin-bottom: 0.5rem;
