--- a/app/globals.css
+++ b/app/globals.css
@@ -110,6 +110,11 @@ li {
   font-family: 'chillax';
 }
 
+.special-header {
+  margin-bottom: 1.5rem;
+  margin-top: 5rem;
+}
+
 @media (max-width: 800px) {
   h2 {
     font-size: 2.5rem;
@@ -130,13 +135,12 @@ li {
     margin: 0;
   }
   .people-cards {
-    margin-top: 7rem;
+    margin-top: 0;
   }
   h2 {
     font-size: 2rem;
   }
   h3 {
-    margin-top: 2.5rem;
     font-size: 1.5rem;
   }
   li {
@@ -146,6 +150,6 @@ li {
     margin-bottom: 3rem;
   }
   .special-text p {
-    margin-bottom: 0.5rem;
+    margin-bottom: 3rem;
   }
 }
